--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@vendia/serverless-express": "^4.12.6",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "resend": "^4.6.0"
   }
